--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pylint = "^3.2.6"
 pytest = "^8.3.2"
 pytest-asyncio = "^0.24.0"
 asyncpg = "^0.29.0"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
